--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input[type="number"] {
 	/* display: block; */
 	width: 80%;
 	height: 2rem;
-	padding: 0.5rem;
+	padding: 0.8rem;
 	font-size: 1rem;
 	font-weight: 700;
 	border: 2px solid hsl(189, 75%, 54%);
@@ -65,6 +65,12 @@ input[type="number"] {
 }
 .btn:active {
 	color: hsl(240, 50%, 70%);
+}
+
+@media screen and (min-width: 768px) {
+	input[type="number"] {
+		width: 60%;
+	}
 }
 
 @media screen and (min-width: 960px) {
